// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with area bucket calculation 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
  ],
  "columns": [
    [
      2548,
      2548,
      2823,
      2337,
      2824,
      2507,
      2844,
      2954,
      3086,
      3053,
      2395,
      2395,
      2710,
      2765,
      3055,
      3230,
      3380,
      3505,
      1488,
      1874,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "curb-weight": 2548,
      },
      {
        "curb-weight": 2548,
      },
      {
        "curb-weight": 2823,
      },
      {
        "curb-weight": 2337,
      },
      {
        "curb-weight": 2824,
      },
      {
        "curb-weight": 2507,
      },
      {
        "curb-weight": 2844,
      },
      {
        "curb-weight": 2954,
      },
      {
        "curb-weight": 3086,
      },
      {
        "curb-weight": 3053,
      },
      {
        "curb-weight": 2395,
      },
      {
        "curb-weight": 2395,
      },
      {
        "curb-weight": 2710,
      },
      {
        "curb-weight": 2765,
      },
      {
        "curb-weight": 3055,
      },
      {
        "curb-weight": 3230,
      },
      {
        "curb-weight": 3380,
      },
      {
        "curb-weight": 3505,
      },
      {
        "curb-weight": 1488,
      },
      {
        "curb-weight": 1874,
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "curb-weight",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "range",
      },
    ],
    "values": [
      {
        "groupId": "weight",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "curb-weight",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        0.012000000000000004,
      ],
    ],
    "groups": [
      [
        2000,
        3000,
      ],
      [
        3000,
        4500,
      ],
      [
        0,
        2000,
      ],
    ],
    "keys": [
      [
        1488,
        3505,
      ],
    ],
    "values": [
      [
        1488,
        3505,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          0.012000000000000004,
        ],
      ],
      "datumIndices": [
        [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          10,
          11,
          12,
          13,
        ],
      ],
      "keys": [
        2000,
        3000,
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          0.004,
        ],
      ],
      "datumIndices": [
        [
          7,
          8,
          13,
          14,
          15,
          16,
        ],
      ],
      "keys": [
        3000,
        4500,
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          0.001,
        ],
      ],
      "datumIndices": [
        [
          16,
          17,
        ],
      ],
      "keys": [
        0,
        2000,
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": false,
  "input": {
    "count": 20,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        2548,
        2548,
        2823,
        2337,
        2824,
        2507,
        2844,
        2954,
        3086,
        3053,
        2395,
        2395,
        2710,
        2765,
        3055,
        3230,
        3380,
        3505,
        1488,
        1874,
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "reduced": {
    "sortedGroupDomain": [
      [
        0,
        2000,
      ],
      [
        2000,
        3000,
      ],
      [
        3000,
        4500,
      ],
    ],
  },
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with average bucket calculation 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
  ],
  "columns": [
    [
      27,
      27,
      26,
      30,
      22,
      25,
      25,
      25,
      20,
      22,
      29,
      29,
      28,
      28,
      25,
      22,
      22,
      20,
      53,
      43,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "engine-size": 130,
        "highway-mpg": 27,
      },
      {
        "engine-size": 130,
        "highway-mpg": 27,
      },
      {
        "engine-size": 152,
        "highway-mpg": 26,
      },
      {
        "engine-size": 109,
        "highway-mpg": 30,
      },
      {
        "engine-size": 136,
        "highway-mpg": 22,
      },
      {
        "engine-size": 136,
        "highway-mpg": 25,
      },
      {
        "engine-size": 136,
        "highway-mpg": 25,
      },
      {
        "engine-size": 136,
        "highway-mpg": 25,
      },
      {
        "engine-size": 131,
        "highway-mpg": 20,
      },
      {
        "engine-size": 131,
        "highway-mpg": 22,
      },
      {
        "engine-size": 108,
        "highway-mpg": 29,
      },
      {
        "engine-size": 108,
        "highway-mpg": 29,
      },
      {
        "engine-size": 164,
        "highway-mpg": 28,
      },
      {
        "engine-size": 164,
        "highway-mpg": 28,
      },
      {
        "engine-size": 164,
        "highway-mpg": 25,
      },
      {
        "engine-size": 209,
        "highway-mpg": 22,
      },
      {
        "engine-size": 209,
        "highway-mpg": 22,
      },
      {
        "engine-size": 209,
        "highway-mpg": 20,
      },
      {
        "engine-size": 61,
        "highway-mpg": 53,
      },
      {
        "engine-size": 90,
        "highway-mpg": 43,
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "engine-size",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "mpg",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "highway-mpg",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        48,
      ],
    ],
    "groups": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
    "keys": [
      [
        130,
        152,
        109,
        136,
        131,
        108,
        164,
        209,
        61,
        90,
      ],
    ],
    "values": [
      [
        20,
        53,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          25.545454545454547,
        ],
      ],
      "datumIndices": [
        [
          0,
          1,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
        ],
      ],
      "keys": [
        "100 - 150",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          24.428571428571427,
        ],
      ],
      "datumIndices": [
        [
          1,
          11,
          12,
          13,
          14,
          15,
          16,
        ],
      ],
      "keys": [
        ">150",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          48,
        ],
      ],
      "datumIndices": [
        [
          16,
          17,
        ],
      ],
      "keys": [
        "<100",
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": false,
  "input": {
    "count": 20,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        130,
        130,
        152,
        109,
        136,
        136,
        136,
        136,
        131,
        131,
        108,
        108,
        164,
        164,
        164,
        209,
        209,
        209,
        61,
        90,
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "reduced": {
    "sortedGroupDomain": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
  },
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel grouped processing - calculated grouping should generated the expected results for simple histogram example with hard-coded buckets 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
  ],
  "columns": [
    [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "engine-size": 130,
      },
      {
        "engine-size": 130,
      },
      {
        "engine-size": 152,
      },
      {
        "engine-size": 109,
      },
      {
        "engine-size": 136,
      },
      {
        "engine-size": 136,
      },
      {
        "engine-size": 136,
      },
      {
        "engine-size": 136,
      },
      {
        "engine-size": 131,
      },
      {
        "engine-size": 131,
      },
      {
        "engine-size": 108,
      },
      {
        "engine-size": 108,
      },
      {
        "engine-size": 164,
      },
      {
        "engine-size": 164,
      },
      {
        "engine-size": 164,
      },
      {
        "engine-size": 209,
      },
      {
        "engine-size": 209,
      },
      {
        "engine-size": 209,
      },
      {
        "engine-size": 61,
      },
      {
        "engine-size": 90,
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "engine-size",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "index": 0,
        "missing": Map {},
        "missingValue": 1,
        "processor": [Function],
        "property": "count",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        11,
      ],
    ],
    "groups": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
    "keys": [
      [
        130,
        152,
        109,
        136,
        131,
        108,
        164,
        209,
        61,
        90,
      ],
    ],
    "values": [
      [
        1,
        1,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          11,
        ],
      ],
      "datumIndices": [
        [
          0,
          1,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
        ],
      ],
      "keys": [
        "100 - 150",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          7,
        ],
      ],
      "datumIndices": [
        [
          1,
          11,
          12,
          13,
          14,
          15,
          16,
        ],
      ],
      "keys": [
        ">150",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          2,
        ],
      ],
      "datumIndices": [
        [
          16,
          17,
        ],
      ],
      "keys": [
        "<100",
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": false,
  "input": {
    "count": 20,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        130,
        130,
        152,
        109,
        136,
        136,
        136,
        136,
        131,
        131,
        108,
        108,
        164,
        164,
        164,
        209,
        209,
        209,
        61,
        90,
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "reduced": {
    "sortedGroupDomain": [
      [
        "100 - 150",
      ],
      [
        ">150",
      ],
      [
        "<100",
      ],
    ],
  },
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel grouped processing - grouped example should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      2.9,
      3.7,
      3.3,
      3.2,
      2.7,
      2.7,
      1.1,
    ],
    [
      3.2,
      4.2,
      3.4,
      3.6,
      3.2,
      2.9,
      1.5,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "regular": 3.2,
        "total": 2.9,
        "type": "Whole economy",
      },
      {
        "regular": 4.2,
        "total": 3.7,
        "type": "Finance and business services",
      },
      {
        "regular": 3.4,
        "total": 3.3,
        "type": "Public sector",
      },
      {
        "regular": 3.6,
        "total": 3.2,
        "type": "Construction",
      },
      {
        "regular": 3.2,
        "total": 2.7,
        "type": "Private sector",
      },
      {
        "regular": 2.9,
        "total": 2.7,
        "type": "Manufacturing",
      },
      {
        "regular": 1.5,
        "total": 1.1,
        "type": "Wholesaling, retailing, hotels and restaurants",
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "total",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "regular",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        7.9,
      ],
    ],
    "groups": [
      [
        "Whole economy",
      ],
      [
        "Finance and business services",
      ],
      [
        "Public sector",
      ],
      [
        "Construction",
      ],
      [
        "Private sector",
      ],
      [
        "Manufacturing",
      ],
      [
        "Wholesaling, retailing, hotels and restaurants",
      ],
    ],
    "keys": [
      [
        "Whole economy",
        "Finance and business services",
        "Public sector",
        "Construction",
        "Private sector",
        "Manufacturing",
        "Wholesaling, retailing, hotels and restaurants",
      ],
    ],
    "values": [
      [
        1.1,
        3.7,
      ],
      [
        1.5,
        4.2,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          6.1,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Whole economy",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          7.9,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Finance and business services",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          6.699999999999999,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Public sector",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          6.800000000000001,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Construction",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          5.9,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Private sector",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          5.6,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Manufacturing",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          2.6,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Wholesaling, retailing, hotels and restaurants",
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": true,
  "input": {
    "count": 7,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        "Whole economy",
        "Finance and business services",
        "Public sector",
        "Construction",
        "Private sector",
        "Manufacturing",
        "Wholesaling, retailing, hotels and restaurants",
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel grouped processing - stacked and normalised example should generated the expected results for 100% stacked area example 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      59.57446808510638,
      63.63636363636363,
      60,
      93.65079365079366,
      100,
      100,
      100,
      100,
      100,
      93.22033898305084,
      80.82191780821918,
      70.73170731707317,
    ],
    [
      100,
      100,
      100,
      100,
      80.35714285714286,
      65.51724137931035,
      69.64285714285715,
      62.711864406779654,
      70.68965517241378,
      100,
      100,
      100,
    ],
    [
      17.02127659574468,
      18.18181818181818,
      17.77777777777778,
      20.634920634920636,
      23.214285714285715,
      22.413793103448278,
      23.214285714285715,
      22.033898305084744,
      22.413793103448278,
      27.11864406779661,
      21.91780821917808,
      19.512195121951223,
    ],
    [
      12.76595744680851,
      13.636363636363635,
      13.333333333333334,
      19.047619047619047,
      21.42857142857143,
      20.689655172413794,
      21.42857142857143,
      22.033898305084744,
      20.689655172413794,
      16.94915254237288,
      13.698630136986301,
      13.414634146341466,
    ],
    [
      7.446808510638298,
      5.681818181818182,
      6.666666666666667,
      7.936507936507937,
      8.928571428571429,
      6.8965517241379315,
      7.142857142857143,
      6.779661016949152,
      10.344827586206897,
      10.169491525423728,
      9.589041095890412,
      7.317073170731708,
    ],
    [
      2.127659574468085,
      1.1363636363636362,
      1.1111111111111112,
      1.5873015873015874,
      3.5714285714285716,
      1.7241379310344829,
      3.5714285714285716,
      1.694915254237288,
      1.7241379310344829,
      1.694915254237288,
      1.36986301369863,
      1.2195121951219514,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "bioenergyWaste": 1.6,
        "coal": 0.8,
        "imported": 0.2,
        "month": "Jan",
        "naturalGas": 9.4,
        "nuclear": 1.2,
        "petroleum": 5.6,
        "windSolarHydro": 0.7,
      },
      {
        "bioenergyWaste": 1.6,
        "coal": 1.1,
        "imported": 0.1,
        "month": "Feb",
        "naturalGas": 8.8,
        "nuclear": 1.2,
        "petroleum": 5.6,
        "windSolarHydro": 0.5,
      },
      {
        "bioenergyWaste": 1.6,
        "coal": 1.4,
        "imported": 0.1,
        "month": "Mar",
        "naturalGas": 9,
        "nuclear": 1.2,
        "petroleum": 5.4,
        "windSolarHydro": 0.6,
      },
      {
        "bioenergyWaste": 1.3,
        "coal": 0.6,
        "imported": 0.1,
        "month": "Apr",
        "naturalGas": 6.3,
        "nuclear": 1.2,
        "petroleum": 5.9,
        "windSolarHydro": 0.5,
      },
      {
        "bioenergyWaste": 1.3,
        "coal": 0.5,
        "imported": 0.2,
        "month": "May",
        "naturalGas": 4.5,
        "nuclear": 1.2,
        "petroleum": 5.6,
        "windSolarHydro": 0.5,
      },
      {
        "bioenergyWaste": 1.3,
        "coal": 0.5,
        "imported": 0.1,
        "month": "Jun",
        "naturalGas": 3.8,
        "nuclear": 1.2,
        "petroleum": 5.8,
        "windSolarHydro": 0.4,
      },
      {
        "bioenergyWaste": 1.3,
        "coal": 0.4,
        "imported": 0.2,
        "month": "Jul",
        "naturalGas": 3.9,
        "nuclear": 1.2,
        "petroleum": 5.6,
        "windSolarHydro": 0.4,
      },
      {
        "bioenergyWaste": 1.3,
        "coal": 0.4,
        "imported": 0.1,
        "month": "Aug",
        "naturalGas": 3.7,
        "nuclear": 1.3,
        "petroleum": 5.9,
        "windSolarHydro": 0.4,
      },
      {
        "bioenergyWaste": 1.3,
        "coal": 0.7,
        "imported": 0.1,
        "month": "Sep",
        "naturalGas": 4.1,
        "nuclear": 1.2,
        "petroleum": 5.8,
        "windSolarHydro": 0.6,
      },
      {
        "bioenergyWaste": 1.6,
        "coal": 0.6,
        "imported": 0.1,
        "month": "Oct",
        "naturalGas": 5.9,
        "nuclear": 1,
        "petroleum": 5.5,
        "windSolarHydro": 0.6,
      },
      {
        "bioenergyWaste": 1.6,
        "coal": 0.9,
        "imported": 0.1,
        "month": "Nov",
        "naturalGas": 7.3,
        "nuclear": 1,
        "petroleum": 5.9,
        "windSolarHydro": 0.7,
      },
      {
        "bioenergyWaste": 1.6,
        "coal": 0.7,
        "imported": 0.1,
        "month": "Dec",
        "naturalGas": 8.2,
        "nuclear": 1.1,
        "petroleum": 5.8,
        "windSolarHydro": 0.6,
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "month",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "petroleum",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "naturalGas",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "bioenergyWaste",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "nuclear",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 4,
        "missing": Map {},
        "property": "windSolarHydro",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 5,
        "missing": Map {},
        "property": "imported",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        249.15254237288133,
      ],
    ],
    "groups": [
      [
        "Jan",
      ],
      [
        "Feb",
      ],
      [
        "Mar",
      ],
      [
        "Apr",
      ],
      [
        "May",
      ],
      [
        "Jun",
      ],
      [
        "Jul",
      ],
      [
        "Aug",
      ],
      [
        "Sep",
      ],
      [
        "Oct",
      ],
      [
        "Nov",
      ],
      [
        "Dec",
      ],
    ],
    "keys": [
      [
        "Jan",
        "Feb",
        "Mar",
        "Apr",
        "May",
        "Jun",
        "Jul",
        "Aug",
        "Sep",
        "Oct",
        "Nov",
        "Dec",
      ],
    ],
    "values": [
      [
        59.57446808510638,
        100,
      ],
      [
        62.711864406779654,
        100,
      ],
      [
        17.02127659574468,
        27.11864406779661,
      ],
      [
        12.76595744680851,
        22.033898305084744,
      ],
      [
        5.681818181818182,
        10.344827586206897,
      ],
      [
        1.1111111111111112,
        3.5714285714285716,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          198.93617021276594,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Jan",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          202.27272727272725,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Feb",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          198.88888888888889,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Mar",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          242.85714285714286,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Apr",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          237.5,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "May",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          217.24137931034485,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Jun",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          225.00000000000006,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Jul",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          215.25423728813556,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Aug",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          225.86206896551724,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Sep",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          249.15254237288133,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Oct",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          227.39726027397262,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Nov",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          212.1951219512195,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Dec",
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": true,
  "input": {
    "count": 12,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        "Jan",
        "Feb",
        "Mar",
        "Apr",
        "May",
        "Jun",
        "Jul",
        "Aug",
        "Sep",
        "Oct",
        "Nov",
        "Dec",
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel grouped processing - stacked and normalised example should generated the expected results for 100% stacked columns example 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      100,
      100,
      100,
      100,
      100,
    ],
    [
      16.338050885044957,
      8.599522526895628,
      7.49973833969869,
      8.098499389286337,
      11.727545152668664,
    ],
    [
      29.502842627313417,
      15.17506435988708,
      15.480767454794336,
      13.444425056709125,
      4.899975702599821,
    ],
    [
      15.088101286238459,
      7.445921725371535,
      8.13014470327722,
      9.319926714360495,
      8.941443265570584,
    ],
    [
      1.1451151163259545,
      0.6573096056573974,
      0.5465929776531842,
      0.4405862851160356,
      0.03239653357090791,
    ],
    [
      5.394943752268054,
      2.7353563453079506,
      2.571946321671835,
      2.2999912755191065,
      1.854701546934478,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "asian": 7317,
        "black": 3742,
        "chinese": 284,
        "mixed": 4052,
        "other": 1338,
        "type": "Nursery",
        "white": 24801,
      },
      {
        "asian": 527391,
        "black": 258774,
        "chinese": 22844,
        "mixed": 298866,
        "other": 95064,
        "type": "Primary",
        "white": 3475379,
      },
      {
        "asian": 377168,
        "black": 198080,
        "chinese": 13317,
        "mixed": 182721,
        "other": 62662,
        "type": "Secondary",
        "white": 2436365,
      },
      {
        "asian": 12328,
        "black": 8546,
        "chinese": 404,
        "mixed": 7426,
        "other": 2109,
        "type": "Special",
        "white": 91696,
      },
      {
        "asian": 605,
        "black": 1104,
        "chinese": 4,
        "mixed": 1448,
        "other": 229,
        "type": "Referral units",
        "white": 12347,
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "white",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "mixed",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "asian",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "black",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 4,
        "missing": Map {},
        "property": "chinese",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 5,
        "missing": Map {},
        "property": "other",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        167.46905366719088,
      ],
    ],
    "groups": [
      [
        "Nursery",
      ],
      [
        "Primary",
      ],
      [
        "Secondary",
      ],
      [
        "Special",
      ],
      [
        "Referral units",
      ],
    ],
    "keys": [
      [
        "Nursery",
        "Primary",
        "Secondary",
        "Special",
        "Referral units",
      ],
    ],
    "values": [
      [
        100,
        100,
      ],
      [
        7.49973833969869,
        16.338050885044957,
      ],
      [
        4.899975702599821,
        29.502842627313417,
      ],
      [
        7.445921725371535,
        15.088101286238459,
      ],
      [
        0.03239653357090791,
        1.1451151163259545,
      ],
      [
        1.854701546934478,
        5.394943752268054,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          167.46905366719088,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Nursery",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          134.6131745631196,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Primary",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          134.22918979709527,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Secondary",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          133.6034287209911,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Special",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          127.45606220134445,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Referral units",
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": true,
  "input": {
    "count": 5,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        "Nursery",
        "Primary",
        "Secondary",
        "Special",
        "Referral units",
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel grouped processing - stacked example should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      4567,
      2842,
      3655,
      905,
      1013,
      1486,
      252,
      97,
    ],
    [
      773,
      938,
      294,
      1139,
      822,
      214,
      539,
      134,
    ],
    [
      274,
      231,
      4,
      621,
      168,
      180,
      37,
      109,
    ],
    [
      388,
      422,
      19,
      919,
      295,
      228,
      100,
      68,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "housingAssociation": 388,
        "localAuthority": 274,
        "ownerOccupied": 4567,
        "privateRented": 773,
        "type": "Semi-detached house",
      },
      {
        "housingAssociation": 422,
        "localAuthority": 231,
        "ownerOccupied": 2842,
        "privateRented": 938,
        "type": "Medium/large terraced house",
      },
      {
        "housingAssociation": 19,
        "localAuthority": 4,
        "ownerOccupied": 3655,
        "privateRented": 294,
        "type": "Detached house",
      },
      {
        "housingAssociation": 919,
        "localAuthority": 621,
        "ownerOccupied": 905,
        "privateRented": 1139,
        "type": "Purpose-built flat low rise",
      },
      {
        "housingAssociation": 295,
        "localAuthority": 168,
        "ownerOccupied": 1013,
        "privateRented": 822,
        "type": "Small terraced house",
      },
      {
        "housingAssociation": 228,
        "localAuthority": 180,
        "ownerOccupied": 1486,
        "privateRented": 214,
        "type": "Bungalow",
      },
      {
        "housingAssociation": 100,
        "localAuthority": 37,
        "ownerOccupied": 252,
        "privateRented": 539,
        "type": "Converted flat",
      },
      {
        "housingAssociation": 68,
        "localAuthority": 109,
        "ownerOccupied": 97,
        "privateRented": 134,
        "type": "Purpose-built flat high rise",
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        0,
        6002,
      ],
    ],
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        97,
        4567,
      ],
      [
        134,
        1139,
      ],
      [
        4,
        621,
      ],
      [
        19,
        919,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          0,
          6002,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Semi-detached house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          4433,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          3972,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Detached house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          3584,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          2298,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Small terraced house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          2108,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Bungalow",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          928,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Converted flat",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          0,
          408,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": true,
  "input": {
    "count": 8,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel grouped processing - stacked with accumulation and normalised example should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      76.09130289903365,
      64.11008346492217,
      92.01913393756294,
      25.251116071428573,
      44.081810269799824,
      70.4933586337761,
      27.155172413793103,
      23.774509803921568,
    ],
    [
      88.97034321892703,
      85.26956914053689,
      99.42094662638469,
      57.03125,
      79.852045256745,
      80.64516129032258,
      85.23706896551724,
      56.61764705882353,
    ],
    [
      93.5354881706098,
      90.48048725468081,
      99.52165156092649,
      74.35825892857143,
      87.16275021758051,
      89.18406072106262,
      89.22413793103448,
      83.33333333333333,
    ],
    [
      100,
      100,
      100,
      100,
      100,
      100,
      100,
      100,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "housingAssociation": 388,
        "localAuthority": 274,
        "ownerOccupied": 4567,
        "privateRented": 773,
        "type": "Semi-detached house",
      },
      {
        "housingAssociation": 422,
        "localAuthority": 231,
        "ownerOccupied": 2842,
        "privateRented": 938,
        "type": "Medium/large terraced house",
      },
      {
        "housingAssociation": 19,
        "localAuthority": 4,
        "ownerOccupied": 3655,
        "privateRented": 294,
        "type": "Detached house",
      },
      {
        "housingAssociation": 919,
        "localAuthority": 621,
        "ownerOccupied": 905,
        "privateRented": 1139,
        "type": "Purpose-built flat low rise",
      },
      {
        "housingAssociation": 295,
        "localAuthority": 168,
        "ownerOccupied": 1013,
        "privateRented": 822,
        "type": "Small terraced house",
      },
      {
        "housingAssociation": 228,
        "localAuthority": 180,
        "ownerOccupied": 1486,
        "privateRented": 214,
        "type": "Bungalow",
      },
      {
        "housingAssociation": 100,
        "localAuthority": 37,
        "ownerOccupied": 252,
        "privateRented": 539,
        "type": "Converted flat",
      },
      {
        "housingAssociation": 68,
        "localAuthority": 109,
        "ownerOccupied": 97,
        "privateRented": 134,
        "type": "Purpose-built flat high rise",
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "all",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "all",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "aggValues": [
      [
        23.774509803921568,
        100,
      ],
    ],
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        23.774509803921568,
        92.01913393756294,
      ],
      [
        56.61764705882353,
        99.42094662638469,
      ],
      [
        74.35825892857143,
        99.52165156092649,
      ],
      [
        100,
        100,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [
        [
          76.09130289903365,
          100,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Semi-detached house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          64.11008346492217,
          100,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          92.01913393756294,
          100,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Detached house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          25.251116071428573,
          100,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          44.081810269799824,
          100,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Small terraced house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          70.4933586337761,
          100,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Bungalow",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          27.155172413793103,
          100,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Converted flat",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [
        [
          23.774509803921568,
          100,
        ],
      ],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": true,
  "input": {
    "count": 8,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel grouped processing - stacked with accumulation example should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      4567,
      7409,
      11064,
      11969,
      12982,
      14468,
      14720,
      14817,
    ],
    [
      773,
      1711,
      2005,
      3144,
      3966,
      4180,
      4719,
      4853,
    ],
    [
      274,
      505,
      509,
      1130,
      1298,
      1478,
      1515,
      1624,
    ],
    [
      388,
      810,
      829,
      1748,
      2043,
      2271,
      2371,
      2439,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "housingAssociation": 388,
        "localAuthority": 274,
        "ownerOccupied": 4567,
        "privateRented": 773,
        "type": "Semi-detached house",
      },
      {
        "housingAssociation": 422,
        "localAuthority": 231,
        "ownerOccupied": 2842,
        "privateRented": 938,
        "type": "Medium/large terraced house",
      },
      {
        "housingAssociation": 19,
        "localAuthority": 4,
        "ownerOccupied": 3655,
        "privateRented": 294,
        "type": "Detached house",
      },
      {
        "housingAssociation": 919,
        "localAuthority": 621,
        "ownerOccupied": 905,
        "privateRented": 1139,
        "type": "Purpose-built flat low rise",
      },
      {
        "housingAssociation": 295,
        "localAuthority": 168,
        "ownerOccupied": 1013,
        "privateRented": 822,
        "type": "Small terraced house",
      },
      {
        "housingAssociation": 228,
        "localAuthority": 180,
        "ownerOccupied": 1486,
        "privateRented": 214,
        "type": "Bungalow",
      },
      {
        "housingAssociation": 100,
        "localAuthority": 37,
        "ownerOccupied": 252,
        "privateRented": 539,
        "type": "Converted flat",
      },
      {
        "housingAssociation": 68,
        "localAuthority": 109,
        "ownerOccupied": 97,
        "privateRented": 134,
        "type": "Purpose-built flat high rise",
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "type",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": "ownerOccupied",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "processor": [Function],
        "property": "ownerOccupied",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "privateRented",
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "processor": [Function],
        "property": "privateRented",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "localAuthority",
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "processor": [Function],
        "property": "localAuthority",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": "housingAssociation",
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "processor": [Function],
        "property": "housingAssociation",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "groups": [
      [
        "Semi-detached house",
      ],
      [
        "Medium/large terraced house",
      ],
      [
        "Detached house",
      ],
      [
        "Purpose-built flat low rise",
      ],
      [
        "Small terraced house",
      ],
      [
        "Bungalow",
      ],
      [
        "Converted flat",
      ],
      [
        "Purpose-built flat high rise",
      ],
    ],
    "keys": [
      [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    ],
    "values": [
      [
        4567,
        14817,
      ],
      [
        773,
        4853,
      ],
      [
        274,
        1624,
      ],
      [
        388,
        2439,
      ],
    ],
  },
  "groups": [
    {
      "aggregation": [],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Semi-detached house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Medium/large terraced house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Detached house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Purpose-built flat low rise",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Small terraced house",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Bungalow",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Converted flat",
      ],
      "validScopes": Set {
        "test",
      },
    },
    {
      "aggregation": [],
      "datumIndices": [
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
        [
          0,
        ],
      ],
      "keys": [
        "Purpose-built flat high rise",
      ],
      "validScopes": Set {
        "test",
      },
    },
  ],
  "groupsUnique": true,
  "input": {
    "count": 8,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        "Semi-detached house",
        "Medium/large terraced house",
        "Detached house",
        "Purpose-built flat low rise",
        "Small terraced house",
        "Bungalow",
        "Converted flat",
        "Purpose-built flat high rise",
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "grouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel repeated property processing should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      0,
      0.1478760779303737,
      0.4257425742574256,
      0.7307569466624081,
      1,
    ],
    [
      0.6869,
      0.05,
      0.087,
      0.0955,
      0.0843,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "browser": "Chrome",
        "share": 0.6869,
        "year": 2020,
      },
      {
        "browser": "Edge",
        "share": 0.0463,
        "year": 2020,
      },
      {
        "browser": "Safari",
        "share": 0.087,
        "year": 2020,
      },
      {
        "browser": "Firefox",
        "share": 0.0955,
        "year": 2020,
      },
      {
        "browser": "Other",
        "share": 0.0843,
        "year": 2020,
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [],
    "values": [
      {
        "groupId": "angleGroup",
        "id": "angle",
        "index": 0,
        "missing": Map {},
        "processor": [Function],
        "property": "share",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "id": "radius",
        "index": 1,
        "missing": Map {},
        "processor": [Function],
        "property": "share",
        "scopes": [
          "test",
        ],
        "type": "value",
        "validation": [Function],
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [],
    "values": [
      [
        0,
        1,
      ],
      [
        0.05,
        0.6869,
      ],
    ],
  },
  "input": {
    "count": 5,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "ungrouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel ungrouped processing - accumulated and normalised properties should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      0,
      0.1352271965379232,
      0.7709344297471291,
      1.0051423577715735,
      2.698967551519787,
      2.8704412131091117,
      3.1130137099915722,
      6.283185307179586,
    ],
    [
      "Christian",
      "Buddhist",
      "Hindu",
      "Jewish",
      "Muslim",
      "Sikh",
      "Other",
      "None",
    ],
    [
      6.283185307179586,
      0,
      0.5553085980495991,
      0.10982426312401541,
      1.7293454390513978,
      0.040217335791892975,
      0.11910518676829843,
      3.367428462267346,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "population": 4159000,
        "religion": "Christian",
      },
      {
        "population": 97000,
        "religion": "Buddhist",
      },
      {
        "population": 456000,
        "religion": "Hindu",
      },
      {
        "population": 168000,
        "religion": "Jewish",
      },
      {
        "population": 1215000,
        "religion": "Muslim",
      },
      {
        "population": 123000,
        "religion": "Sikh",
      },
      {
        "population": 174000,
        "religion": "Other",
      },
      {
        "population": 2274000,
        "religion": "None",
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [],
    "values": [
      {
        "groupId": "population",
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "processor": [Function],
        "property": "population",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "index": 1,
        "missing": Map {},
        "property": "religion",
        "scopes": [
          "test",
        ],
        "type": "value",
        "valueType": "category",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "population",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [],
    "values": [
      [
        0,
        6.283185307179586,
      ],
      [
        "Christian",
        "Buddhist",
        "Hindu",
        "Jewish",
        "Muslim",
        "Sikh",
        "Other",
        "None",
      ],
      [
        0,
        6.283185307179586,
      ],
    ],
  },
  "input": {
    "count": 8,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "ungrouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;

exports[`DataModel ungrouped processing should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      120.27,
      119.53,
      119.12,
      119.29,
      119.13,
      118.97,
      119.05,
      119.22,
      119.72,
      120.1,
      120.48,
      120.83,
      121.7,
      122.75,
      124.06,
      125.43,
      126.36,
      127.5,
      127.97,
      128.51,
      129.14,
      129.41,
      128.89,
      127.66,
      126.66,
      126.49,
      126.86,
      127.13,
      127.81,
      128.03,
      128.37,
      128.36,
      128.17,
      128.22,
      127.86,
      127.79,
      126.92,
      126.78,
      126.92,
      126.87,
      126.91,
      126.4,
      125.77,
      125.56,
      125.59,
      125.58,
      125.32,
      124.81,
      124.75,
      124.33,
      124.16,
      124.96,
    ],
    [
      130.33,
      129.47,
      128.92,
      129.1,
      129.13,
      129.17,
      129.23,
      129.66,
      130.25,
      130.59,
      130.85,
      131.15,
      131.48,
      132.08,
      132.96,
      133.99,
      134.6,
      135.41,
      135.36,
      135.82,
      136.45,
      136.39,
      135.4,
      133.76,
      131.81,
      131.55,
      131.68,
      131.86,
      132.21,
      132.6,
      132.61,
      132.59,
      132.6,
      132.51,
      132.29,
      131.89,
      131.35,
      131.52,
      131.83,
      131.82,
      131.89,
      131.28,
      130.6,
      130.38,
      130.42,
      130.35,
      130.08,
      129.79,
      129.79,
      129.56,
      129.81,
      130.54,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "date": 2019-01-07T00:00:00.000Z,
        "diesel": 130.33,
        "petrol": 120.27,
      },
      {
        "date": 2019-01-14T00:00:00.000Z,
        "diesel": 129.47,
        "petrol": 119.53,
      },
      {
        "date": 2019-01-21T00:00:00.000Z,
        "diesel": 128.92,
        "petrol": 119.12,
      },
      {
        "date": 2019-01-28T00:00:00.000Z,
        "diesel": 129.1,
        "petrol": 119.29,
      },
      {
        "date": 2019-02-04T00:00:00.000Z,
        "diesel": 129.13,
        "petrol": 119.13,
      },
      {
        "date": 2019-02-11T00:00:00.000Z,
        "diesel": 129.17,
        "petrol": 118.97,
      },
      {
        "date": 2019-02-18T00:00:00.000Z,
        "diesel": 129.23,
        "petrol": 119.05,
      },
      {
        "date": 2019-02-25T00:00:00.000Z,
        "diesel": 129.66,
        "petrol": 119.22,
      },
      {
        "date": 2019-03-04T00:00:00.000Z,
        "diesel": 130.25,
        "petrol": 119.72,
      },
      {
        "date": 2019-03-11T00:00:00.000Z,
        "diesel": 130.59,
        "petrol": 120.1,
      },
      {
        "date": 2019-03-18T00:00:00.000Z,
        "diesel": 130.85,
        "petrol": 120.48,
      },
      {
        "date": 2019-03-25T00:00:00.000Z,
        "diesel": 131.15,
        "petrol": 120.83,
      },
      {
        "date": 2019-03-31T23:00:00.000Z,
        "diesel": 131.48,
        "petrol": 121.7,
      },
      {
        "date": 2019-04-07T23:00:00.000Z,
        "diesel": 132.08,
        "petrol": 122.75,
      },
      {
        "date": 2019-04-14T23:00:00.000Z,
        "diesel": 132.96,
        "petrol": 124.06,
      },
      {
        "date": 2019-04-21T23:00:00.000Z,
        "diesel": 133.99,
        "petrol": 125.43,
      },
      {
        "date": 2019-04-28T23:00:00.000Z,
        "diesel": 134.6,
        "petrol": 126.36,
      },
      {
        "date": 2019-05-05T23:00:00.000Z,
        "diesel": 135.41,
        "petrol": 127.5,
      },
      {
        "date": 2019-05-12T23:00:00.000Z,
        "diesel": 135.36,
        "petrol": 127.97,
      },
      {
        "date": 2019-05-19T23:00:00.000Z,
        "diesel": 135.82,
        "petrol": 128.51,
      },
      {
        "date": 2019-05-26T23:00:00.000Z,
        "diesel": 136.45,
        "petrol": 129.14,
      },
      {
        "date": 2019-06-02T23:00:00.000Z,
        "diesel": 136.39,
        "petrol": 129.41,
      },
      {
        "date": 2019-06-09T23:00:00.000Z,
        "diesel": 135.4,
        "petrol": 128.89,
      },
      {
        "date": 2019-06-16T23:00:00.000Z,
        "diesel": 133.76,
        "petrol": 127.66,
      },
      {
        "date": 2019-06-23T23:00:00.000Z,
        "diesel": 131.81,
        "petrol": 126.66,
      },
      {
        "date": 2019-06-30T23:00:00.000Z,
        "diesel": 131.55,
        "petrol": 126.49,
      },
      {
        "date": 2019-07-07T23:00:00.000Z,
        "diesel": 131.68,
        "petrol": 126.86,
      },
      {
        "date": 2019-07-14T23:00:00.000Z,
        "diesel": 131.86,
        "petrol": 127.13,
      },
      {
        "date": 2019-07-21T23:00:00.000Z,
        "diesel": 132.21,
        "petrol": 127.81,
      },
      {
        "date": 2019-07-28T23:00:00.000Z,
        "diesel": 132.6,
        "petrol": 128.03,
      },
      {
        "date": 2019-08-04T23:00:00.000Z,
        "diesel": 132.61,
        "petrol": 128.37,
      },
      {
        "date": 2019-08-11T23:00:00.000Z,
        "diesel": 132.59,
        "petrol": 128.36,
      },
      {
        "date": 2019-08-18T23:00:00.000Z,
        "diesel": 132.6,
        "petrol": 128.17,
      },
      {
        "date": 2019-08-25T23:00:00.000Z,
        "diesel": 132.51,
        "petrol": 128.22,
      },
      {
        "date": 2019-09-01T23:00:00.000Z,
        "diesel": 132.29,
        "petrol": 127.86,
      },
      {
        "date": 2019-09-08T23:00:00.000Z,
        "diesel": 131.89,
        "petrol": 127.79,
      },
      {
        "date": 2019-09-15T23:00:00.000Z,
        "diesel": 131.35,
        "petrol": 126.92,
      },
      {
        "date": 2019-09-22T23:00:00.000Z,
        "diesel": 131.52,
        "petrol": 126.78,
      },
      {
        "date": 2019-09-29T23:00:00.000Z,
        "diesel": 131.83,
        "petrol": 126.92,
      },
      {
        "date": 2019-10-06T23:00:00.000Z,
        "diesel": 131.82,
        "petrol": 126.87,
      },
      {
        "date": 2019-10-13T23:00:00.000Z,
        "diesel": 131.89,
        "petrol": 126.91,
      },
      {
        "date": 2019-10-20T23:00:00.000Z,
        "diesel": 131.28,
        "petrol": 126.4,
      },
      {
        "date": 2019-10-28T00:00:00.000Z,
        "diesel": 130.6,
        "petrol": 125.77,
      },
      {
        "date": 2019-11-04T00:00:00.000Z,
        "diesel": 130.38,
        "petrol": 125.56,
      },
      {
        "date": 2019-11-11T00:00:00.000Z,
        "diesel": 130.42,
        "petrol": 125.59,
      },
      {
        "date": 2019-11-18T00:00:00.000Z,
        "diesel": 130.35,
        "petrol": 125.58,
      },
      {
        "date": 2019-11-25T00:00:00.000Z,
        "diesel": 130.08,
        "petrol": 125.32,
      },
      {
        "date": 2019-12-02T00:00:00.000Z,
        "diesel": 129.79,
        "petrol": 124.81,
      },
      {
        "date": 2019-12-09T00:00:00.000Z,
        "diesel": 129.79,
        "petrol": 124.75,
      },
      {
        "date": 2019-12-16T00:00:00.000Z,
        "diesel": 129.56,
        "petrol": 124.33,
      },
      {
        "date": 2019-12-23T00:00:00.000Z,
        "diesel": 129.81,
        "petrol": 124.16,
      },
      {
        "date": 2019-12-30T00:00:00.000Z,
        "diesel": 130.54,
        "petrol": 124.96,
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "date",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "range",
      },
    ],
    "values": [
      {
        "groupId": undefined,
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "petrol",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "diesel",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [
        2019-01-07T00:00:00.000Z,
        2019-12-30T00:00:00.000Z,
      ],
    ],
    "values": [
      [
        118.97,
        129.41,
      ],
      [
        128.92,
        136.45,
      ],
    ],
  },
  "input": {
    "count": 52,
  },
  "invalidData": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        2019-01-07T00:00:00.000Z,
        2019-01-14T00:00:00.000Z,
        2019-01-21T00:00:00.000Z,
        2019-01-28T00:00:00.000Z,
        2019-02-04T00:00:00.000Z,
        2019-02-11T00:00:00.000Z,
        2019-02-18T00:00:00.000Z,
        2019-02-25T00:00:00.000Z,
        2019-03-04T00:00:00.000Z,
        2019-03-11T00:00:00.000Z,
        2019-03-18T00:00:00.000Z,
        2019-03-25T00:00:00.000Z,
        2019-03-31T23:00:00.000Z,
        2019-04-07T23:00:00.000Z,
        2019-04-14T23:00:00.000Z,
        2019-04-21T23:00:00.000Z,
        2019-04-28T23:00:00.000Z,
        2019-05-05T23:00:00.000Z,
        2019-05-12T23:00:00.000Z,
        2019-05-19T23:00:00.000Z,
        2019-05-26T23:00:00.000Z,
        2019-06-02T23:00:00.000Z,
        2019-06-09T23:00:00.000Z,
        2019-06-16T23:00:00.000Z,
        2019-06-23T23:00:00.000Z,
        2019-06-30T23:00:00.000Z,
        2019-07-07T23:00:00.000Z,
        2019-07-14T23:00:00.000Z,
        2019-07-21T23:00:00.000Z,
        2019-07-28T23:00:00.000Z,
        2019-08-04T23:00:00.000Z,
        2019-08-11T23:00:00.000Z,
        2019-08-18T23:00:00.000Z,
        2019-08-25T23:00:00.000Z,
        2019-09-01T23:00:00.000Z,
        2019-09-08T23:00:00.000Z,
        2019-09-15T23:00:00.000Z,
        2019-09-22T23:00:00.000Z,
        2019-09-29T23:00:00.000Z,
        2019-10-06T23:00:00.000Z,
        2019-10-13T23:00:00.000Z,
        2019-10-20T23:00:00.000Z,
        2019-10-28T00:00:00.000Z,
        2019-11-04T00:00:00.000Z,
        2019-11-11T00:00:00.000Z,
        2019-11-18T00:00:00.000Z,
        2019-11-25T00:00:00.000Z,
        2019-12-02T00:00:00.000Z,
        2019-12-09T00:00:00.000Z,
        2019-12-16T00:00:00.000Z,
        2019-12-23T00:00:00.000Z,
        2019-12-30T00:00:00.000Z,
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "ungrouped",
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
}
`;
